Removed files, fixed test and error on test