@@ -1,17 +1,14 @@
 package fr.unk;
 
 import fr.unk.contrainte.Constraint;
-import fr.unk.contrainte.nc.ListEquals;
 import fr.unk.contrainte.vc.Equals;
+import fr.unk.domaine.DomainMap;
 import fr.unk.domaine.number.IntDomain;
-import fr.unk.variable.VarGetter;
 import fr.unk.variable.Variable;
 import fr.unk.variable.numvar.CSPInt;
 import org.junit.jupiter.api.*;
 
 import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
 import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -19,22 +16,22 @@ import static org.junit.jupiter.api.Assertions.*;
 class CSPSolverTest {
     //Ce n'est pas Frédéric qui la fait donc je sais pas
     @BeforeAll
-    static void setUpBeforeClass() throws Exception {
+    static void setUpBeforeClass() {
         System.out.println ("Avant toutes les executions");
     }
 
     @AfterAll
-    static void tearDownAfterClass() throws Exception {
+    static void tearDownAfterClass() {
         System.out.println ("Apres toutes les executions");
     }
 
     @BeforeEach
-    void setUp() throws Exception {
+    void setUp() {
         System.out.println ("avant une fonction sous test");
     }
 
     @AfterEach
-    void tearDown() throws Exception {
+    void tearDown() {
         System.out.println ("apres une fonction sous test");
     }
 
@@ -42,14 +39,14 @@ class CSPSolverTest {
     void testSolveStructurel() {
         // Cas où les variables inconnues et les contraintes sont vides : vérifie si la méthode solve() renvoie null dans ce cas
         CSPSolver<Integer> solver1 = new CSPSolver<>();
-        assertNull(solver1.solve(new ArrayList<> (), new HashMap<> ()));
+        assertNull(solver1.trySolve());
 
         // Cas où une seule variable inconnue sans contrainte : vérifie si la méthode solve() renvoie la bonne solution dans ce cas
-        Variable<Integer> var1 = new Variable<>("x", Integer.class);
+        Variable<Integer> var1 = new Variable<>("x");
         IntDomain domain1 = new IntDomain(0, 10, 1);
         solver1.addConstraint (new Equals<> (var1, 5));
         solver1.addUnknownVariable(var1, domain1);
-        Map<String, Object> solution1 = solver1.trySolve();
+        Map<String, Integer> solution1 = solver1.trySolve();
         assertNotNull(solution1);
         assertEquals(1, solution1.size());
         assertEquals(5, solution1.get("x"));
@@ -86,26 +83,31 @@ class CSPSolverTest {
     @Test
     void testaddConstraint(){
         CSPSolver<Integer> solver = new CSPSolver<>();
-        Constraint constraint = new Constraint() {
+        Constraint<Integer> constraint = new Constraint<>(new ArrayList<>(), new ArrayList<>()) {
             @Override
-            public boolean satisfied(Map<String, Object> objectMap) {
+            public boolean satisfied() {
                 return false;
             }
+
+            @Override
+            public void reduceDomain(DomainMap<Integer> domainMap) {
+
+            }
+
         };
         solver.addConstraint(constraint);
         assertEquals(1, solver.constraintList.size());
-        assertEquals(constraint, solver.constraintList.get(0));
+        assertEquals(constraint, solver.constraintList.getFirst());
     }
     @Test
     public void testAddUnknownVariable() {
         CSPSolver<Integer> solver = new CSPSolver<>();
 
-        Variable<Integer> variable = new Variable<>("myvar",Integer.class);
+        Variable<Integer> variable = new Variable<>("myvar");
         IntDomain domain = new IntDomain(1,100,1);
         solver.addUnknownVariable(variable, domain);
-        assertEquals(1, solver.uknVariables.size());
-        assertEquals(variable, solver.uknVariables.get(0).getL());
-        assertEquals(domain, solver.uknVariables.get(0).getR());
+        assertTrue(solver.hasUnknownVariable(variable));
+        assertEquals(domain, solver.getDefinedDomain(variable));
     }
 
     @Test
@@ -120,14 +122,14 @@ class CSPSolverTest {
 
         cspSolver.addUnknownVariable(cspInt, new IntDomain(0,3,1));
         cspSolver.addUnknownVariable(cspInt2, new IntDomain(0,3,1));
-        Map<String, Object> result = cspSolver.trySolve();
+        Map<String, Integer> result = cspSolver.trySolve();
 
         if(result == null){
             System.out.println("None");
             return;
         }
 
-        for(Map.Entry<String, Object> entry : result.entrySet())
+        for (Map.Entry<String, Integer> entry : result.entrySet())
             System.out.println(entry.getKey()+": "+entry.getValue());
 
     }
